<resources>
    <string name="app_name">Tracker+</string>
    <string name="button1">Add Calories</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="addingcalaories">Adding Calories</string>
    <string name="addbreakfast">Add Breakfast</string>
    <string name="addlunch">Add Lunch</string>
    <string name="adddinner">Add Dinner</string>
    <string name="addsnacks">Add Snacks</string>
    <string name="goback">Return</string>
    <string name="calaoriestoadd">Calaories to add:</string>
    <string name="calaories">Enter amount of calories intake </string>
    <string name="add">Add</string>
    <string name="mainmenu">Main Menu</string>
    <string name="viewcalaories">View Calories</string>
    <string name="viewingcalaories">Viewing Calories</string>
    <string name="listview">List View</string>
    <string name="data">Calories Data</string>
    <string name="averagecalaories">Average Calories</string>
    <string name="loginandregister">Registration and Login</string>
    <string name="registration">Registration</string>
    <string name="password">Enter Password</string>
    <string name="username">Enter Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="usertext">Username:</string>
    <string name="passwordtext">Password:</string>
    <string name="logout">Logout</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
